# solana_croudfunding

./: .gitignore  README.md
.github/workflows/: test.yml
app/: package.json
app/src/components/: CampaignCard.tsx
app/src/pages/: index.tsx
app/utils/: program.ts
program/: Cargo.toml
program/src/: lib.rs
tests/: croudfunding.test.ts
