[package]
name = "solana-crowdfunding"
version = "0.1.0"
description = "Decentralized crowdfunding platform on Solana"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "~1.18.0"
borsh = "0.10.0"
borsh-derive = "0.10.0"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "~1.18.0"
solana-sdk = "~1.18.0"